# medai-chatbot

./: .gitignore  docker-compose.cpu.yml  docker-compose.yaml  pyproject.toml  t.py
app/: main.py
app/core/: mongodb.py  settings.py
app/llm/: base.py  llm_creator.py  openai.py
app/models/: db_models.py  user.py
app/parser/: chunking.py  embedding_pipeline.py
app/parser/file/: base.py  bulk.py  docs_parser.py
app/parser/schema/: base.py  schema.py
app/retriever/: base.py  classic_rag.py  quick_and_dirty_rag.py
app/routes/: answer.py  user.py
app/schemas/: answer.py  base.py  search.py  stream.py
app/tests/: test_azure.py
app/utils/: token_management.py  usage.py
app/vectorstore/: base.py  qdrant.py  vector_creator.py
docling-pdf-processor/: main.py  pyproject.toml  route.py  service.py
processor/: route.py  schema.py  service.py
processor/core/: config.py
processor/worker/: celery_config.py  tasks.py
