[tool.poetry]
name = "docling-pdf-processor"
version = "0.1.0"
description = ""
authors = ["mohamedayari1 <ayarim781@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.41.1"
docling = "^2.15.1"
pillow = ">=10.4.0,<11.0.0"
fastapi = {extras = ["standard"], version = "^0.115.6"}
python-multipart = "^0.0.20"
celery = "^5.4.0"
flower = "^2.0.1"
redis = "^5.2.1"
gunicorn = "^23.0.0"
pydantic-settings = "^2.7.1"
motor = "^3.6.1"
tiktoken = "^0.8.0"
qdrant-client = "^1.12.2"
structlog = "^24.4.0"
sentence-transformers = "^3.3.1"
langchain-openai = "0.3.0"
openai = "^1.59.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
